--- a/nginx.conf
+++ b/nginx.conf
@@ -11,22 +11,48 @@ http {
     default_type        application/octet-stream;
     sendfile            on;
 
+    log_format combined1 '$hs_updateStats'
+                         '$remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $body_bytes_sent '
+                         '"$http_referer" "$http_user_agent"';
+
     haskell load /var/lib/nginx/test_tools_extra.so;
 
     haskell_run_service simpleService_aggregate_stats
             $hs_stats
-            'AggregateServerConf { asPort = 8020, asPurgeInterval = Min 5 }';
+            'AggregateServerConf { asPort = 8100, asPurgeInterval = Min 5 }';
 
     haskell_service_var_in_shm stats 64k /tmp $hs_stats;
+
+    haskell_run_service simpleService_reportStats $hs_reportStats 8100;
 
     server {
         listen       8010;
         server_name  main;
+
         error_log    /tmp/nginx-test-haskell-error.log;
-        access_log   /tmp/nginx-test-haskell-access.log;
+        access_log   /tmp/nginx-test-haskell-access.log combined1;
+
+        haskell_run updateStats $hs_updateStats $bytes_sent;
 
         location / {
             echo Ok;
+        }
+    }
+
+    server {
+        listen       8020;
+        server_name  stat;
+
+        error_log    /tmp/nginx-test-haskell-error.log;
+        access_log   /tmp/nginx-test-haskell-access.log;
+
+        haskell_run updateStats $hs_updateStats $bytes_sent;
+
+        location / {
+            allow 127.0.0.1;
+            deny all;
+            proxy_pass http://127.0.0.1:8100/get/stats;
         }
     }
 }
