--- a/nginx.conf
+++ b/nginx.conf
@@ -11,10 +11,10 @@ http {
     default_type        application/octet-stream;
     sendfile            on;
 
-    log_format combined1 '$hs_updateStats'
-                         '$remote_addr - $remote_user [$time_local] '
+    log_format combined1 '$remote_addr - $remote_user [$time_local] '
                          '"$request" $status $body_bytes_sent '
-                         '"$http_referer" "$http_user_agent"';
+                         '"$http_referer" "$http_user_agent"'
+                         '$hs_updateStats';
 
     haskell load /var/lib/nginx/test_tools_extra.so;
 
@@ -29,7 +29,6 @@ http {
     server {
         listen       8010;
         server_name  main;
-
         error_log    /tmp/nginx-test-haskell-error.log;
         access_log   /tmp/nginx-test-haskell-access.log combined1;
 
@@ -43,11 +42,6 @@ http {
     server {
         listen       8020;
         server_name  stat;
-
-        error_log    /tmp/nginx-test-haskell-error.log;
-        access_log   /tmp/nginx-test-haskell-access.log;
-
-        haskell_run updateStats $hs_updateStats $bytes_sent;
 
         location / {
             allow 127.0.0.1;
