--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,7 @@ http {
 
     haskell load /var/lib/nginx/test_tools_extra.so;
 
-    haskell_run_service simpleService_aggregate_stats
-            $hs_stats
+    haskell_run_service simpleService_aggregate_stats $hs_stats
             'AggregateServerConf { asPort = 8100, asPurgeInterval = Min 5 }';
 
     haskell_service_var_in_shm stats 64k /tmp $hs_stats;
