--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,6 @@ http {
     default_type        application/octet-stream;
     sendfile            on;
 
-    log_format combined1 '$remote_addr - $remote_user [$time_local] '
-                         '"$request" $status $body_bytes_sent '
-                         '"$http_referer" "$http_user_agent"'
-                         '$hs_updateStats';
-
     haskell load /var/lib/nginx/test_tools_extra.so;
 
     haskell_run_service simpleService_aggregate_stats $hs_stats
@@ -29,9 +24,9 @@ http {
         listen       8010;
         server_name  main;
         error_log    /tmp/nginx-test-haskell-error.log;
-        access_log   /tmp/nginx-test-haskell-access.log combined1;
+        access_log   /tmp/nginx-test-haskell-access.log;
 
-        haskell_run updateStats $hs_updateStats $bytes_sent;
+        haskell_run updateStats !$hs_updateStats $bytes_sent;
 
         location / {
             echo Ok;
