added module NgxExport.Tools.EDE for parsing JSON values

--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    0.1.0.1
+version:                    0.2.0.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <http://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -10,7 +10,7 @@ extra-source-files:         Changelog.md
 author:                     Alexey Radkov <alexey.radkov@gmail.com>
 maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
 stability:                  experimental
-copyright:                  2019 Alexey Radkov
+copyright:                  2019-2020 Alexey Radkov
 category:                   Network
 build-type:                 Simple
 cabal-version:              >= 1.8
@@ -19,17 +19,24 @@ library
   build-depends:            base >= 4.8 && < 5
                           , template-haskell >= 2.11.0.0
                           , bytestring >= 0.10.0.0
+                          , base64 >= 0.3.0.0
+                          , ngx-export
                           , ngx-export-tools >= 0.4.5.0
                           , aeson >= 1.0.0.0
+                          , http-types >= 0.7.0
                           , http-client
                           , containers
+                          , unordered-containers
                           , enclosed-exceptions
                           , snap-core
                           , snap-server
+                          , ede
+                          , ansi-wl-pprint
                           , text
                           , time
 
   exposed-modules:          NgxExport.Tools.Aggregate
+                            NgxExport.Tools.EDE
 
   ghc-options:             -Wall
 
