--- a/test/EDE/nginx.conf
+++ b/test/EDE/nginx.conf
@@ -15,7 +15,7 @@ http {
 
     haskell_run_service simpleService_compileEDETemplates $hs_EDETemplates
             '("/var/lib/nginx/EDE",
-              [("task1",
+              [("user",
                 "{{user.id}}/{{user.ops|b64}}/{{resources.path|uenc}}")])';
 
     server {
@@ -25,19 +25,19 @@ http {
         access_log   /tmp/nginx-test-haskell-access.log;
 
         location / {
-            haskell_run_async_on_request_body renderEDETemplate $hs_task1 task1;
-            rewrite ^ /internal/task1/$hs_task1 last;
+            haskell_run_async_on_request_body renderEDETemplate $hs_user user;
+            rewrite ^ /internal/user/$hs_user last;
         }
 
-        location ~ ^/internal/task1/([^/]+)/([^/]+)/([^/]+)$ {
+        location ~ ^/internal/user/([^/]+)/([^/]+)/([^/]+)$ {
             internal;
-            echo "Task1: user: $1, options: $2, path: $3";
+            echo "User id: $1, options: $2, path: $3";
         }
 
-        location ~ /internal/task1/(.*) {
+        location ~ /internal/user/(.*) {
             internal;
             echo_status 404;
-            echo "Bad input for task1: $1";
+            echo "Bad input for user: $1";
         }
     }
 }
