better catching of EDE errors in the example

--- a/test/EDE/nginx.conf
+++ b/test/EDE/nginx.conf
@@ -29,6 +29,12 @@ http {
             rewrite ^ /internal/user/$hs_user last;
         }
 
+        location ~ ^/internal/user/(EDE\ ERROR:.*) {
+            internal;
+            echo_status 404;
+            echo "Bad input: $1";
+        }
+
         location ~ ^/internal/user/([^/]+)/([^/]+)/([^/]+)$ {
             internal;
             echo "User id: $1, options: $2, path: $3";
@@ -37,7 +43,7 @@ http {
         location ~ /internal/user/(.*) {
             internal;
             echo_status 404;
-            echo "Bad input for user: $1";
+            echo "Unexpected input: $1";
         }
     }
 }
