--- a/test/EDE/nginx.conf
+++ b/test/EDE/nginx.conf
@@ -45,6 +45,13 @@ http {
             echo_status 404;
             echo "Unexpected input: $1";
         }
+
+        location /cookie {
+            haskell_run urlDecode $hs_cookie_user $cookie_user;
+            haskell_run renderEDETemplateFromFreeValue $hs_user_from_cookie
+                    user|$hs_cookie_user;
+            rewrite ^ /internal/user/$hs_user_from_cookie last;
+        }
     }
 }
 
