--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    0.2.2.1
+version:                    0.3.0.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -38,6 +38,7 @@ library
                           , aeson >= 1.0.0.0
                           , http-types >= 0.7.0
                           , http-client
+                          , case-insensitive
                           , containers
                           , unordered-containers
                           , enclosed-exceptions
@@ -58,6 +59,7 @@ library
                           , trifecta <= 2
 
   exposed-modules:          NgxExport.Tools.Aggregate
+                          , NgxExport.Tools.Subrequest
 
   if flag(EDE)
     exposed-modules:        NgxExport.Tools.EDE
