--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     haskell load /var/lib/nginx/test_tools_extra_subrequest.so;
 
-    haskell_run_service simpleService_subrequestFromService $hs_service_httpbin
+    haskell_run_service simpleService_makeRequest $hs_service_httpbin
             '{"uri": "http://httpbin.org"}';
 
     haskell_var_empty_on_error $hs_subrequest;
@@ -29,13 +29,14 @@ http {
         access_log   /tmp/nginx-test-haskell-access.log;
 
         location / {
-            haskell_run_async subrequest $hs_subrequest
+            haskell_run_async makeSubrequest $hs_subrequest
                     '{"uri": "http://127.0.0.1:8020/proxy",
                       "headers": [["Custom-Header", "$arg_a"]]}';
 
             if ($hs_subrequest = '') {
                 echo_status 404;
                 echo "Failed to perform subrequest";
+                break;
             }
 
             echo -n $hs_subrequest;
