--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -37,7 +37,7 @@ library
                           , ngx-export-tools >= 0.4.5.0
                           , aeson >= 1.0.0.0
                           , http-types >= 0.7.0
-                          , http-client
+                          , http-client >= 0.5.0
                           , case-insensitive
                           , containers
                           , unordered-containers
