fixed setting of response timeout

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -33,6 +33,16 @@ http {
                     '{"uri": "http://127.0.0.1:8020/proxy",
                       "headers": [["Custom-Header", "$arg_a"]]}';
 
+# the same configuration for using with makeSubrequestWithRead
+#
+#                    'SubrequestConf { srMethod = ""
+#                                    , srUri = "http://127.0.0.1:8020/proxy"
+#                                    , srBody = ""
+#                                    , srHeaders = [("Custom-Header", "$arg_a")]
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 10)
+#                                    }';
+
             if ($hs_subrequest = '') {
                 echo_status 404;
                 echo "Failed to perform subrequest";
