--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -52,6 +52,59 @@ http {
             echo -n $hs_subrequest;
         }
 
+        location /full {
+            haskell_run_async makeSubrequestFull $hs_subrequest
+                    '{"uri": "http://127.0.0.1:$arg_p/proxy",
+                      "headers": [["Custom-Header", "$arg_a"]]}';
+
+# the same configuration for using with makeSubrequestWithRead
+#
+#                    'SubrequestConf { srMethod = ""
+#                                    , srUri = "http://127.0.0.1:$arg_p/proxy"
+#                                    , srBody = ""
+#                                    , srHeaders = [("Custom-Header", "$arg_a")]
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 10)
+#                                    }';
+
+            haskell_run extractStatusFromFullResponse $hs_subrequest_status
+                    $hs_subrequest;
+
+            haskell_run extractHeaderFromFullResponse $hs_subrequest_header
+                    subrequest-header|$hs_subrequest;
+
+            haskell_run extractBodyFromFullResponse $hs_subrequest_body
+                    $hs_subrequest;
+
+            if ($hs_subrequest_status = 400) {
+                echo_status 400;
+                echo "Bad request";
+                break;
+            }
+
+            if ($hs_subrequest_status = 500) {
+                echo_status 500;
+                echo "Internal server error while making subrequest";
+                break;
+            }
+
+            if ($hs_subrequest_status = 502) {
+                echo_status 502;
+                echo "Backend unavailable";
+                break;
+            }
+
+            if ($hs_subrequest_status != 200) {
+                echo_status 404;
+                echo "Subrequest status: $hs_subrequest_status";
+                break;
+            }
+
+            echo    "Subrequest status: $hs_subrequest_status";
+            echo    "Subrequest-Header: $hs_subrequest_header";
+            echo -n "Subrequest body: $hs_subrequest_body";
+        }
+
         location /proxy {
             internal;
             proxy_pass http://backend;
@@ -68,6 +121,7 @@ http {
 
         location / {
             set $custom_header $http_custom_header;
+            add_header Subrequest-Header "This is response from subrequest";
             echo "In backend, Custom-Header is '$custom_header'";
         }
     }
