--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -30,7 +30,7 @@ http {
 
         location / {
             haskell_run_async makeSubrequest $hs_subrequest
-                    '{"uri": "http://127.0.0.1:8020/proxy",
+                    '{"uri": "http://127.0.0.1:8010/proxy",
                       "headers": [["Custom-Header", "$arg_a"]]}';
 
 # the same configuration for using with makeSubrequestWithRead
@@ -106,7 +106,8 @@ http {
         }
 
         location /proxy {
-            internal;
+            allow 127.0.0.1;
+            deny all;
             proxy_pass http://backend;
         }
 
