added Prometheus module for counters from nginx-custom-counters-module

--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -47,6 +47,7 @@ library
                           , snap-server
                           , text
                           , time
+                          , safe
 
   if flag(EDE)
     if flag(ExperimentalEDE)
@@ -60,6 +61,7 @@ library
                           , trifecta <= 2
 
   exposed-modules:          NgxExport.Tools.Aggregate
+                          , NgxExport.Tools.Prometheus
                           , NgxExport.Tools.Subrequest
 
   if flag(EDE)
