added docs on Prometheus module

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -21,7 +21,7 @@ http {
         '~^5(?:\d){2}'         1;
     }
 
-    map_to_range_index $request_time $request_time_bin
+    map_to_range_index $hs_request_time $request_time_bucket
         0.005
         0.01
         0.05
@@ -33,7 +33,7 @@ http {
         30.0
         60.0;
 
-    map_to_range_index $bytes_sent $bytes_sent_bin
+    map_to_range_index $hs_bytes_sent $bytes_sent_bucket
         0
         10
         100
@@ -67,12 +67,16 @@ http {
         counter $cnt_4xx inc $inc_cnt_4xx;
         counter $cnt_5xx inc $inc_cnt_5xx;
 
-        histogram $hst_request_time 11 $request_time_bin;
-        haskell_run scale1000 $hs_request_time $request_time;
-        counter $hst_request_time_sum inc $hs_request_time;
+        # cache $request_time and $bytes_sent
+        haskell_run ! $hs_request_time $request_time;
+        haskell_run ! $hs_bytes_sent $bytes_sent;
 
-        histogram $hst_bytes_sent 6 $bytes_sent_bin;
-        counter $hst_bytes_sent_sum inc $bytes_sent;
+        histogram $hst_request_time 11 $request_time_bucket;
+        haskell_run scale1000 $hs_request_time_scaled $hs_request_time;
+        counter $hst_request_time_sum inc $hs_request_time_scaled;
+
+        histogram $hst_bytes_sent 6 $bytes_sent_bucket;
+        counter $hst_bytes_sent_sum inc $hs_bytes_sent;
 
         location / {
             echo_sleep 0.5;
@@ -93,20 +97,18 @@ http {
         listen       8020;
         server_name  stats;
 
-        counter_set_id main;
-
         location / {
             haskell_run toPrometheusMetrics $hs_prom_metrics
-                    '["main",
-                      $cnt_collection,
-                      $cnt_histograms,
-                      {"cnt_uptime": $cnt_uptime
-                      ,"cnt_uptime_reload": $cnt_uptime_reload
-                      }
+                    '["main"
+                      ,$cnt_collection
+                      ,$cnt_histograms
+                      ,{"cnt_uptime": $cnt_uptime
+                       ,"cnt_uptime_reload": $cnt_uptime_reload
+                       }
                      ]';
 
             if ($hs_prom_metrics = '') {
-                return 500;
+                return 503;
             }
 
             echo -n $hs_prom_metrics;
@@ -122,12 +124,6 @@ http {
 
         location /uptime {
             echo "$cnt_uptime ($cnt_uptime_reload)";
-        }
-
-        location /reset {
-            histogram $hst_request_time reset;
-            counter $hst_request_time_sum set 0;
-            return 200;
         }
     }
 }
