--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    0.4.1.1
+version:                    0.5.0.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -13,7 +13,7 @@ stability:                  experimental
 copyright:                  2019-2020 Alexey Radkov
 category:                   Network
 build-type:                 Simple
-cabal-version:              >= 1.8
+cabal-version:              1.20
 
 source-repository head
   type:                     git
@@ -29,6 +29,7 @@ flag ExperimentalEDE
   manual:                   True
 
 library
+  default-language:         Haskell2010
   build-depends:            base >= 4.8 && < 5
                           , template-haskell >= 2.11.0.0
                           , bytestring >= 0.10.0.0
