added gauge metrics type to Prometheus counters

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -47,10 +47,12 @@ http {
                 { pcMetrics = fromList
                     [("cnt_4xx", "Number of responses with 4xx status")
                     ,("cnt_5xx", "Number of responses with 5xx status")
+                    ,("cnt_stub_status_active", "Active requests")
                     ,("cnt_uptime", "Nginx master uptime")
                     ,("cnt_uptime_reload", "Nginx master uptime after reload")
                     ,("hst_request_time", "Request duration")
                     ]
+                , pcGauges = ["cnt_stub_status_active"]
                 , pcScale1000 = ["hst_request_time_sum"]
                 }';
 
@@ -102,7 +104,8 @@ http {
                     '["main"
                      ,$cnt_collection
                      ,$cnt_histograms
-                     ,{"cnt_uptime": $cnt_uptime
+                     ,{"cnt_stub_status_active": $cnt_stub_status_active
+                      ,"cnt_uptime": $cnt_uptime
                       ,"cnt_uptime_reload": $cnt_uptime_reload
                       }
                      ]';
@@ -123,7 +126,7 @@ http {
         }
 
         location /uptime {
-            echo "$cnt_uptime ($cnt_uptime_reload)";
+            echo "Uptime (after reload): $cnt_uptime ($cnt_uptime_reload)";
         }
     }
 }
