added handlers for extracting data from lists of values

--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -43,6 +43,7 @@ library
                           , case-insensitive
                           , containers
                           , unordered-containers
+                          , array
                           , enclosed-exceptions
                           , snap-core
                           , snap-server
