updated Nginx configuration for Prometheus tests

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -11,6 +11,16 @@ http {
     default_type        application/octet-stream;
     sendfile            on;
 
+    variables_hash_max_size 4096;
+
+    upstream backends {
+        server 127.0.0.1:8030 max_fails=0;
+        server 127.0.0.1:8040 max_fails=0;
+        #server 127.0.0.1:8040;
+    }
+
+    #proxy_next_upstream error timeout http_504;
+
     map $status $inc_cnt_4xx {
         default                0;
         '~^4(?:\d){2}'         1;
@@ -19,6 +29,16 @@ http {
     map $status $inc_cnt_5xx {
         default                0;
         '~^5(?:\d){2}'         1;
+    }
+
+    map $hs_upstream_status $inc_cnt_u_4xx {
+        default                               0;
+        '~^(?:(?:\d+),){2}(?P<m_status>\d+)'  $m_status;
+    }
+
+    map $hs_upstream_status $inc_cnt_u_5xx {
+        default                               0;
+        '~^(?:(?:\d+),){3}(?P<m_status>\d+)'  $m_status;
     }
 
     map_to_range_index $hs_request_time $request_time_bucket
@@ -40,6 +60,18 @@ http {
         1000
         10000;
 
+    map_to_range_index $hs_u_response_time $u_response_time_bucket
+        0.005
+        0.01
+        0.05
+        0.1
+        0.5
+        1.0
+        5.0
+        10.0
+        30.0
+        60.0;
+
     haskell load /var/lib/nginx/test_tools_extra_prometheus.so;
 
     haskell_run_service simpleService_prometheusConf $hs_prometheus_conf
@@ -47,13 +79,21 @@ http {
                 { pcMetrics = fromList
                     [("cnt_4xx", "Number of responses with 4xx status")
                     ,("cnt_5xx", "Number of responses with 5xx status")
+                    ,("cnt_u_4xx"
+                     ,"Number of responses from upstreams with 4xx status")
+                    ,("cnt_u_5xx"
+                     ,"Number of responses from upstreams with 5xx status")
                     ,("cnt_stub_status_active", "Active requests")
                     ,("cnt_uptime", "Nginx master uptime")
                     ,("cnt_uptime_reload", "Nginx master uptime after reload")
                     ,("hst_request_time", "Request duration")
+                    ,("hst_u_response_time"
+                     ,"Response time from all servers in a single upstream")
                     ]
                 , pcGauges = ["cnt_stub_status_active"]
-                , pcScale1000 = ["hst_request_time_sum"]
+                , pcScale1000 = ["hst_request_time_sum"
+                                ,"hst_u_response_time_sum"
+                                ]
                 }';
 
     haskell_var_empty_on_error $hs_prom_metrics;
@@ -69,6 +109,10 @@ http {
         counter $cnt_4xx inc $inc_cnt_4xx;
         counter $cnt_5xx inc $inc_cnt_5xx;
 
+        haskell_run statusLayout $hs_upstream_status $upstream_status;
+        counter $cnt_u_4xx inc $inc_cnt_u_4xx;
+        counter $cnt_u_5xx inc $inc_cnt_u_5xx;
+
         # cache $request_time and $bytes_sent
         haskell_run ! $hs_request_time $request_time;
         haskell_run ! $hs_bytes_sent $bytes_sent;
@@ -79,6 +123,13 @@ http {
 
         histogram $hst_bytes_sent 6 $bytes_sent_bucket;
         counter $hst_bytes_sent_sum inc $hs_bytes_sent;
+
+        haskell_run ! $hs_u_response_times $upstream_response_time;
+        haskell_run cumulativeFPValue $hs_u_response_time $hs_u_response_times;
+
+        histogram $hst_u_response_time 11 $u_response_time_bucket;
+        haskell_run scale1000 $hs_u_response_time_scaled $hs_u_response_time;
+        counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
 
         location / {
             echo_sleep 0.5;
@@ -92,6 +143,17 @@ http {
 
         location /404 {
             return 404;
+        }
+
+        location /backends {
+            error_page 404 @status404;
+            proxy_intercept_errors on;
+            proxy_pass http://backends;
+        }
+
+        location @status404 {
+            echo_sleep 0.2;
+            echo "Caught 404";
         }
     }
 
@@ -127,6 +189,27 @@ http {
 
         location /uptime {
             echo "Uptime (after reload): $cnt_uptime ($cnt_uptime_reload)";
+        }
+    }
+
+    server {
+        listen       8030;
+        server_name  backend1;
+
+        location / {
+            echo_sleep 0.5;
+            echo_status 404;
+            echo "Backend1 Ok";
+        }
+    }
+
+    server {
+        listen       8040;
+        server_name  backend2;
+
+        location / {
+            echo_status 504;
+            echo "Backend2 Ok";
         }
     }
 }
