--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -132,16 +132,19 @@ http {
         counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
 
         location / {
+            set $u_response_time_bucket unavailable;
             echo_sleep 0.5;
             echo Ok;
         }
 
         location /1 {
+            set $u_response_time_bucket unavailable;
             echo_sleep 1.0;
             echo Ok;
         }
 
         location /404 {
+            set $u_response_time_bucket unavailable;
             return 404;
         }
 
