improved examples in docs

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -131,30 +131,34 @@ http {
         haskell_run scale1000 $hs_u_response_time_scaled $hs_u_response_time;
         counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
 
+        counter $hst_u_response_time_00 undo;
+        counter $hst_u_response_time_cnt undo;
+
         location / {
-            set $u_response_time_bucket unavailable;
             echo_sleep 0.5;
             echo Ok;
         }
 
         location /1 {
-            set $u_response_time_bucket unavailable;
             echo_sleep 1.0;
             echo Ok;
         }
 
         location /404 {
-            set $u_response_time_bucket unavailable;
             return 404;
         }
 
         location /backends {
+            counter $hst_u_response_time_00 inc $inc_hst_u_response_time_00;
+            counter $hst_u_response_time_cnt inc $inc_hst_u_response_time_cnt;
             error_page 404 @status404;
             proxy_intercept_errors on;
             proxy_pass http://backends;
         }
 
         location @status404 {
+            counter $hst_u_response_time_00 inc $inc_hst_u_response_time_00;
+            counter $hst_u_response_time_cnt inc $inc_hst_u_response_time_cnt;
             echo_sleep 0.2;
             echo "Caught 404";
         }
