added content handler fromFullResponse for proxying purposes

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -67,6 +67,11 @@ http {
 #                                          ResponseTimeout (Sec 10)
 #                                    }';
 
+            if ($arg_proxy = yes) {
+                haskell_content fromFullResponse $hs_subrequest;
+                break;
+            }
+
             haskell_run extractStatusFromFullResponse $hs_subrequest_status
                     $hs_subrequest;
 
