added content handler prometheusMetrics

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -183,7 +183,21 @@ http {
                 return 503;
             }
 
+            default_type "text/plain; version=0.0.4; charset=utf-8";
+
             echo -n $hs_prom_metrics;
+        }
+
+        location /ch {
+            haskell_async_content prometheusMetrics
+                    '["main"
+                     ,$cnt_collection
+                     ,$cnt_histograms
+                     ,{"cnt_stub_status_active": $cnt_stub_status_active
+                      ,"cnt_uptime": $cnt_uptime
+                      ,"cnt_uptime_reload": $cnt_uptime_reload
+                      }
+                     ]';
         }
 
         location /counters {
