docs updated after histogram reuse operation

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -124,15 +124,13 @@ http {
         histogram $hst_bytes_sent 6 $bytes_sent_bucket;
         counter $hst_bytes_sent_sum inc $hs_bytes_sent;
 
+        # cache $upstream_response_time
         haskell_run ! $hs_u_response_times $upstream_response_time;
-        haskell_run cumulativeFPValue $hs_u_response_time $hs_u_response_times;
 
         histogram $hst_u_response_time 11 $u_response_time_bucket;
+        histogram $hst_u_response_time undo;
+        haskell_run cumulativeFPValue $hs_u_response_time $hs_u_response_times;
         haskell_run scale1000 $hs_u_response_time_scaled $hs_u_response_time;
-        counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
-
-        counter $hst_u_response_time_00 undo;
-        counter $hst_u_response_time_cnt undo;
 
         location / {
             echo_sleep 0.5;
@@ -149,16 +147,16 @@ http {
         }
 
         location /backends {
-            counter $hst_u_response_time_00 inc $inc_hst_u_response_time_00;
-            counter $hst_u_response_time_cnt inc $inc_hst_u_response_time_cnt;
+            histogram $hst_u_response_time reuse;
+            counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
             error_page 404 @status404;
             proxy_intercept_errors on;
             proxy_pass http://backends;
         }
 
         location @status404 {
-            counter $hst_u_response_time_00 inc $inc_hst_u_response_time_00;
-            counter $hst_u_response_time_cnt inc $inc_hst_u_response_time_cnt;
+            histogram $hst_u_response_time reuse;
+            counter $hst_u_response_time_sum inc $hs_u_response_time_scaled;
             echo_sleep 0.2;
             echo "Caught 404";
         }
