using Data.HashSet for pcGauges and pcScale1000 in Prometheus metrics

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -90,10 +90,12 @@ http {
                     ,("hst_u_response_time"
                      ,"Response time from all servers in a single upstream")
                     ]
-                , pcGauges = ["cnt_stub_status_active"]
-                , pcScale1000 = ["hst_request_time_sum"
-                                ,"hst_u_response_time_sum"
-                                ]
+                , pcGauges = fromList
+                    ["cnt_stub_status_active"]
+                , pcScale1000 = fromList
+                    ["hst_request_time_sum"
+                    ,"hst_u_response_time_sum"
+                    ]
                 }';
 
     haskell_var_empty_on_error $hs_prom_metrics;
