--- a/test/Prometheus/nginx_anno.conf
+++ b/test/Prometheus/nginx_anno.conf
@@ -83,10 +83,12 @@ http {
                     ,("cnt_uptime_reload", "Nginx master uptime after reload")
                     ,("hst_request_time", "Request duration")
                     ]
-                , pcGauges = ["cnt_stub_status_active"]
-                , pcScale1000 = ["hst_request_time@scope=(total)_sum"
-                                ,"hst_request_time@scope=(in_upstreams)_sum"
-                                ]
+                , pcGauges = fromList
+                    ["cnt_stub_status_active"]
+                , pcScale1000 = fromList
+                    ["hst_request_time@scope=(total)_sum"
+                    ,"hst_request_time@scope=(in_upstreams)_sum"
+                    ]
                 }';
 
     haskell_var_empty_on_error $hs_prom_metrics;
