allow Unix domain sockets in configurations of internal HTTP subrequests

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -20,6 +20,9 @@ http {
     haskell_run_service simpleService_makeRequest $hs_service_httpbin
             '{"uri": "http://httpbin.org"}';
 
+    haskell_run_service simpleService_configureUDS $hs_service_uds
+            'UDSConf {udsPath = "/tmp/backend.sock"}';
+
     haskell_var_empty_on_error $hs_subrequest;
 
     server {
@@ -30,8 +33,9 @@ http {
 
         location / {
             haskell_run_async makeSubrequest $hs_subrequest
-                    '{"uri": "http://127.0.0.1:8010/proxy",
-                      "headers": [["Custom-Header", "$arg_a"]]}';
+                    '{"uri": "http://127.0.0.1:8010/proxy"
+                     ,"headers": [["Custom-Header", "$arg_a"]]
+                     }';
 
 # the same configuration for using with makeSubrequestWithRead
 #
@@ -40,7 +44,35 @@ http {
 #                                    , srBody = ""
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
-#                                          ResponseTimeout (Sec 10)
+#                                          ResponseTimeout (Sec 30)
+#                                    , srUseUDS = False
+#                                    }';
+
+            if ($hs_subrequest = '') {
+                echo_status 404;
+                echo "Failed to perform subrequest";
+                break;
+            }
+
+            echo -n $hs_subrequest;
+        }
+
+        location /uds {
+            haskell_run_async makeSubrequest $hs_subrequest
+                    '{"uri": "http://backend_proxy/"
+                     ,"headers": [["Custom-Header", "$arg_a"]]
+                     ,"useUDS": true
+                     }';
+
+# the same configuration for using with makeSubrequestWithRead
+#
+#                    'SubrequestConf { srMethod = ""
+#                                    , srUri = "http://internal/"
+#                                    , srBody = ""
+#                                    , srHeaders = [("Custom-Header", "$arg_a")]
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 30)
+#                                    , srUseUDS = True
 #                                    }';
 
             if ($hs_subrequest = '') {
@@ -54,8 +86,9 @@ http {
 
         location /full {
             haskell_run_async makeSubrequestFull $hs_subrequest
-                    '{"uri": "http://127.0.0.1:$arg_p/proxy",
-                      "headers": [["Custom-Header", "$arg_a"]]}';
+                    '{"uri": "http://127.0.0.1:$arg_p/proxy"
+                     ,"headers": [["Custom-Header", "$arg_a"]]
+                     }';
 
 # the same configuration for using with makeSubrequestWithRead
 #
@@ -64,7 +97,8 @@ http {
 #                                    , srBody = ""
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
-#                                          ResponseTimeout (Sec 10)
+#                                          ResponseTimeout (Sec 30)
+#                                    , srUseUDS = False
 #                                    }';
 
             if ($arg_proxy = yes) {
@@ -118,6 +152,15 @@ http {
 
         location /httpbin {
             echo $hs_service_httpbin;
+        }
+    }
+
+    server {
+        listen       unix:/tmp/backend.sock;
+        server_name  backend_proxy;
+
+        location / {
+            proxy_pass http://backend;
         }
     }
 
