--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    0.5.9.0
+version:                    0.6.0.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -22,11 +22,9 @@ source-repository head
 flag EDE
   description:              Build EDE module.
 
-flag ExperimentalEDE
+flag EDEUsePrettyprinter
   description:              Build EDE module migrated from @ansi-wl-pprint@ to
                             @prettyprinter@.
-  default:                  False
-  manual:                   True
 
 library
   default-language:         Haskell2010
@@ -53,7 +51,7 @@ library
                           , safe
 
   if flag(EDE)
-    if flag(ExperimentalEDE)
+    if flag(EDEUsePrettyprinter)
       build-depends:        ede
                           , prettyprinter
                           , trifecta >= 2.1
