handler extractRequestStatusFromFullResponse was replaced ...
with handler extractExceptionFromFullResponse, the new handler contains
the error message if the subrequest was terminated by an exception

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -101,6 +101,13 @@ http {
 #                                    , srUseUDS = False
 #                                    }';
 
+            set $proxy_with_exception $arg_proxy$arg_exc;
+
+            if ($proxy_with_exception = yesyes) {
+                haskell_content fromFullResponseWithException $hs_subrequest;
+                break;
+            }
+
             if ($arg_proxy = yes) {
                 haskell_content fromFullResponse $hs_subrequest;
                 break;
@@ -114,6 +121,15 @@ http {
 
             haskell_run extractBodyFromFullResponse $hs_subrequest_body
                     $hs_subrequest;
+
+#            haskell_run extractExceptionFromFullResponse $hs_subrequest_error
+#                    $hs_subrequest;
+#
+#            if ($hs_subrequest_error) {
+#                echo_status 502;
+#                echo "Subrequest exception: $hs_subrequest_error";
+#                break;
+#            }
 
             if ($hs_subrequest_status = 400) {
                 echo_status 400;
